# latex-pandoc-template

./: .gitignore  AGENTS.md  LICENSE  README.md  convert-docx.ps1  example.bib  kqdlxxb.cls  pyproject.toml  reference.bib  reference.docx  temp-ref.bib  temp-ref.csl  temp.tex
doc/: README.en.md  technical-stack.md
filters/: latex-crossref-cn.lua
notes/: reference-entry-draft.md
refference/: kqdlxxb.tex
scripts/: apply-docx-table-styles.ps1  namespace-reference-docx-styles.py  prepare-pandoc-images.py  repair-reference-docx-styles.py  tex-to-docx.ps1
