[project]
name = "latex-pandoc-template"
version = "0.1.0"
description = "Pandoc helpers for converting LaTeX manuscripts to Word."
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24.0",
]

[tool.uv]
package = false

# 配置 uv 使用清华镜像源加速下载
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true